# CalculationMethodsLab1Vorobiov

./: .gitignore  CMakeLists.txt  bezier.c  bezier.h  bicubicspline.c  bicubicspline.h  bilagrange.c  bilagrange.h  bisection.c  bisection.h  cholesky.c  cholesky.h  cubicspline.c  cubicspline.h  def.h  differentialinterpolation.c  differentialinterpolation.h  discretenewton.c  discretenewton.h  gaussianintegral.c  gaussianintegral.h  gmresarnoldi.c  gmresarnoldi.h  householder.c  householder.h  main.c  matrixutils.c  matrixutils.h  minquads.c  minquads.h  mtwister.c  mtwister.h  newton.c  newton.h  powervalue.c  powervalue.h  qralgorithm.c  qralgorithm.h  quadraticregression.c  quadraticregression.h  (+4 more)
docs/: report.docx  report.txt
